# dwarf-d-sl-gt4py

./: .gitignore  .pre-commit-config.yaml  README.md  TRANSLATION_SUMMARY.md  hello.py  pyproject.toml  requirements.txt  run_test_blossey_gt4py.sh
SL_GT4Py/config/: advect_blossey.yml
TRACER_LAB/TRACER_2D_XY/: init  run_tracer_xy.sh
TRACER_LAB/TRACER_2D_XZ/: init  run_tracer_xz.sh
TRACER_LAB/TRACER_3D/: run_tracer_3d.sh
config/: advect_blossey.yml  durran_blossey.yml  isolated_circular_mountain.yml  uniform_advection.yml
docs/: conf.py  index.rst
src/: config.py  main.py
src/sl_dace/: blossey_velocity.py  boundaries.py  diagnostics.py  dims.py  elarche.py  ffsl.py  ffsl_x.py  ffsl_xy.py  ffsl_y.py  polar_coordinates.py  sl_driver.py  sl_init.py  sl_xy.py
src/sl_gt4py/: __init__.py  backup.py  blossey.py  blossey_velocity.py  build.py  cfl.py  copy.py  dace_interpolation.py  departure_search.py  driver.py  filter.py  floor.py  interpolation.py  jax_interpolation.py  numba_interpolation.py  sl_2D.py  smilag_init.py  utils.py
src/sl_jax/: INSTALLATION.md  OPTIMIZATIONS.md  README.md  __init__.py  boundaries.py  diagnostics.py  filter.py  periodic_filters.py  sl_2D.py
src/sl_python/: blossey.py  cfl.py  diagnostics.py  driver.py  filter.py  initialization.py  interpolation.py  mass_filter.py  periodic_filters.py  plot.py  run_model_2D.py  run_model_2D_padding.py  sandbox.py  sl_2D.py  sl_3D.py  (+1 more)
tests/: conftest.py  driver_one_step.py  driver_uniform.py  main.py  test_blossey.py  test_blossey_gt4py.py  test_one_step.py  test_uniform.py  test_uniform_old.py
(+212 files in other folders)
