[project]
name = "dwarf-d-sl-gt4py"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.1",
    "netcdf4>=1.7.2",
    "pytest>=8.3.5",
    "sphinx>=8.1.3",
]

[dependency-groups]
experimental = [
    "jax>=0.5.3",
    "numba>=0.61.0",
]
dev = [
    "isort>=6.0.1",
]
doc = [
    "sphinx-autobuild>=2024.10.3",
]
